# PySimpleGUI

./: README.md  main.py  pyproject.toml
editor/: README.md  editor.py
erste_schritte/: README.md  anordnen.py  einfach.py  komplex.py  komplexer.py  slider.py
installation/: README.md
menu/: README.md  menu.py
schleife/: README.md  ereignis.py  ereignis_schleife.py  ereignis_schleife_beenden.py
texteditor/: README2.txt  editor.py  pyshbed.py
thema/: README.md  thema.py
