[tool.poetry]
name = "repl_nix_PySimpleGUI"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
PySimpleGUI = "^4.60.4"
PySimpleGUIWeb = "^0.39.0"
PySimpleGUIQt = "^0.35.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
